# VisualAI

./: .clangd  .gitignore  CMakeLists.txt  DEVLOG.md  README.md  build.sh
cmake/: toolchain.cmake
src/: common.hpp  decoder.cc  decoder.hpp  main.cc  mjpeg_server.cc  mjpeg_server.hpp  npu_worker.cc  npu_worker.hpp  parking.cc  parking.hpp  postprocess.cc  postprocess.hpp  stats.cc  stats.hpp
tools/: annotate_spots.py  spot.conf
